# feigen

./: .pre-commit-config.yaml  README.md  pyproject.toml
examples/: custom_poisson2d.py  iganet_bspline2d.py  poisson2d.py
feigen/: __init__.py  _base.py  bspline.py  bspline_texture.py  comm.py  custom_poisson2d.py  jacobian_determinant.py  log.py  nurbs_weights.py  poisson2d.py
